
1.3     28 February 2017
        - Fix issue #4 (Incorrect handling of LIST items with inheritance).
          Note that with this fix the internal raw representation of the
          arrays in the config data has changed, but the API masks that
          change and stays the same; applying a schema to a config also
          ensures that the resulting data structure is correct

1.204   04 October 2015
        - Add `to_ixhash_recursive` helper function to Config::Neat::Util

1.203   05 August 2015
        - Add missing 'JSON' dependency (used in `dump-nconf`)

1.202   05 August 2015
        - Add missing test files to the distribution

1.201   05 August 2015
        - Get rid of File::Slurp::Tiny in favor of simple read_file function

1.2     05 August 2015

        - Fixed properly check for unmatched closing bracket, add corresponding test
        - Added check and test case for missing closing bracket
        - Fixed some warnings, mute 'unitialized' warnings where appropriate
        - Fixed parsing of multi-line comments in this form:  /** / ... /**/

1.101   26 Oct 2014

        - Bugfix: store 'converted to array' flags in a context-aware stack

1.1     26 Oct 2014

        - Fixed and simplified parsing for repeating nodes

        - More parsing tests; use subtests for better structuring

1.0     25 Oct 2014

        - Added the support for 'LIST' schema type
          to always cast single or multiple entries with the
          same name to an array (list) of nested items

        - Replace File::Slurp with File::Slurp::Tiny
          (as per https://rt.cpan.org/Public/Bug/Display.html?id=95680)

        - is_any_hash, is_any_array convenience functions
          in Config::Neat::Util

0.9     11 May 2014

        - Implemented proper cascaded inheritance

0.8     10 May 2014

        - Fix inheriting the same local paths from different files
          (save the file name as a part of the cache item key)

0.7     11 April 2014
