@@ -11,7 +11,4 @@ options
     opt8                NO
     opt9                N
     opt10               FALSE
-
-    opt11               some garbage
-    opt12               some more garbage
 }
