@@ -1,0 +1,5 @@
+options
+{
+    opt11               some garbage
+    opt12               some more garbage
+}
